# CHIP-8_Emulator

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp  loadrom.hpp
source/: CMakeLists.txt  chip8.cpp  chip8.hpp  loadrom.cpp  main.cpp
